[package]
name = "diesel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.0"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
